Tue Jun  8 10:12:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * DAnCE/DAnCE_ArtifactInstallation.idl:
        * DAnCE/DAnCE_Core.mpc:
        * tools/Artifact_Installation/DAnCE_Artifact_Installation.idl:
        * tools/Artifact_Installation/Artifact_Installation_Impl.h:
        * tools/Artifact_Installation/Artifact_Installation.mpc:
        * MPC/config/dance_artifact_installation.mpb:
	  Changes to integrate Artifact Installation framework with the
	  rest of DAnCE.

Tue Jun  8 09:32:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/docs/ptc_09-10-26 DDS4CCM v1-0 WCB.pdf:
          Removed this file, old draft document

Tue Jun  8 09:30:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/docs/DDSforCCM-meta.uml:
        * connectors/dds4ccm/docs/ccm_dds.idl:
        * connectors/dds4ccm/docs/ccm_dds_dlrl.idl:
          Updated to beta 3

Tue Jun  8 09:20:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ami4ccm_lem_stub.mpb:
          Because we need access to the container POA we need to link with
          a CIAO implementation library

Tue Jun  8 09:19:10 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
          Remove fixed_bugs flag from test OneProcess.

Tue Jun  8 09:13:10 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/OneProcess/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/OneProcess/descriptors/PlanOne.cdp:
        * connectors/ami4ccm/tests/OneProcess/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneProcess/descriptors/run_test_one.pl:
        * connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender_exec.cpp:
          Change testresult, all in one process should work synchronous.

Tue Jun  8 07:51:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * DAnCE/tools/Artifact_Installation/Artifact_Installation_Impl.cpp: