@@ -1,34 +1,6 @@
 // -*- C++ -*-
 // $Id$
 
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.4
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- *       http://doc.ece.uci.edu/
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-// TAO_IDL - Generated from
-// .\be\be_codegen.cpp:1278
-
 #include "Foo_exec.h"
 
 namespace CIAO_Foo_Impl
@@ -298,9 +270,76 @@ namespace CIAO_Foo_Impl
       }
   }
 
+  ::Data Foo_exec_i::my_data_union (void)
+  {
+    Data d;
+    return d;
+  }
   
+
+  void
+  Foo_exec_i::my_data_union (const ::Data & /*my_data_union*/)
+  {
+  }
+
+  ::Data2* Foo_exec_i::my_var_data_union (void)
+  {
+    return 0;
+  }
+
+  void Foo_exec_i::my_var_data_union (const ::Data2 & /*my_data_union*/)
+  {
+  }
+
+  ::string_sequence * Foo_exec_i::my_string_sequence (void)
+  {
+    return 0;
+  }
+  
+  void Foo_exec_i::my_string_sequence (
+      const ::string_sequence & /*my_string_sequence*/)
+  {
+  }
+
+  char * Foo_exec_i::my_fixed_string (void)
+  {
+    return 0;
+  }
+
+  void Foo_exec_i::my_fixed_string (const char * /*my_fixed_string*/)
+  {
+  }
+
+  char *Foo_exec_i::my_variable_string (void)
+  {
+    return 0;
+  }
+
+  void Foo_exec_i::my_variable_string (const char * /*my_variable_string*/)
+  {
+  }
+
+  ::CORBA::WChar *Foo_exec_i::my_fixed_wstring (void)
+  {
+    return 0;
+  }
+
+  void my_fixed_wstring (const ::CORBA::WChar * /*my_fixed_wstring*/)
+  {
+  }
+
+  ::CORBA::WChar *Foo_exec_i::my_variable_wstring (void)
+  {
+    return 0;
+  }
+
+  void Foo_exec_i::my_variable_wstring (
+      const ::CORBA::WChar * /*my_variable_wstring*/)
+  {
+  }
+ 
   // Operations from Components::SessionComponent.
-  
+ 
   void
   Foo_exec_i::set_session_context (
     ::Components::SessionContext_ptr ctx)
@@ -317,25 +356,21 @@ namespace CIAO_Foo_Impl
   void
   Foo_exec_i::configuration_complete (void)
   {
-    /* Your code here. */
   }
   
   void
   Foo_exec_i::ccm_activate (void)
   {
-    /* Your code here. */
   }
   
   void
   Foo_exec_i::ccm_passivate (void)
   {
-    /* Your code here. */
   }
   
   void
   Foo_exec_i::ccm_remove (void)
   {
-    /* Your code here. */
   }
   
   extern "C" FOO_EXEC_Export ::Components::EnterpriseComponent_ptr
