@@ -1,37 +1,8 @@
 // -*- C++ -*-
 // $Id$
 
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.4
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- *       http://doc.ece.uci.edu/
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-// TAO_IDL - Generated from
-// .\be\be_codegen.cpp:1217
-
 #ifndef CIAO_FOO_EXEC_H_
 #define CIAO_FOO_EXEC_H_
-
 
 #include "FooEC.h"
 
@@ -41,7 +12,6 @@
 
 #include /**/ "Foo_exec_export.h"
 #include "tao/LocalObject.h"
-
 
 namespace CIAO_Foo_Impl
 {
@@ -162,32 +132,46 @@ namespace CIAO_Foo_Impl
     // TAO_IDL - Generated from
     // c:\middleware\ace_devo\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:42
     
-    virtual void
-    my_double_sequence (
+    virtual void my_double_sequence (
       const ::double_sequence & my_double_sequence);
     
-    // TAO_IDL - Generated from
-    // c:\middleware\ace_devo\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:42
+    virtual ::Bar my_bar_struct (void);
     
-    virtual ::Bar
-    my_bar_struct (void);
-    
-    // TAO_IDL - Generated from
-    // c:\middleware\ace_devo\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:42
-    
-    virtual void
-    my_bar_struct (
-      const ::Bar & my_bar_struct);
+    virtual void my_bar_struct (const ::Bar & my_bar_struct);
 
-    virtual ::Baz *
-    my_baz_struct (void);
+    virtual ::Baz *my_baz_struct (void);
     
-    // TAO_IDL - Generated from
-    // c:\middleware\ace_devo\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:42
+    virtual void my_baz_struct (const ::Baz & my_baz_struct);
+
+    virtual ::Data my_data_union (void);
     
-    virtual void
-    my_baz_struct (
-      const ::Baz & my_baz_struct);
+    virtual void my_data_union (const ::Data & my_data_union);
+
+    virtual ::Data2* my_var_data_union (void);
+
+    virtual void my_var_data_union (const ::Data2 & my_data_union);
+
+    virtual ::string_sequence *my_string_sequence (void);
+
+    virtual void my_string_sequence (
+      const ::string_sequence & my_string_sequence);
+
+    virtual char *my_fixed_string (void);
+
+    virtual void my_fixed_string (const char * my_fixed_string);
+
+    virtual char *my_variable_string (void);
+
+    virtual void my_variable_string (const char * my_variable_string);
+
+    virtual ::CORBA::WChar *my_fixed_wstring (void);
+
+    virtual void my_fixed_wstring (const ::CORBA::WChar * my_fixed_wstring);
+
+    virtual ::CORBA::WChar *my_variable_wstring (void);
+
+    virtual void my_variable_wstring (
+      const ::CORBA::WChar * my_variable_wstring);
     //@}
     
     //@{
